src/JS.java
/* Generated By:JavaCC: Do not edit this line. JS.java */
import java.io.IOException;
import java.io.FileNotFoundException;
import java.io.FileReader;
import java.util.HashMap;
import java.util.logging.Level;
import java.util.logging.Logger;
import java.util.Scanner;




public class JS implements JSConstants {
                        public static HashMap<String, Value> Vars = new HashMap<String, Value>();
  public static void main(String[] args) throws ParseException, TokenMgrError, FileNotFoundException {

                        JS Js = new JS(new FileReader("D:\\test.js"));
                        StartNode S = Start();
                        S.execute(Vars);
                }

//TOKEN : /* Assignment ops */
//{
//	< EQ: "=">
//|	< #PE: "+=">
//|	< #ME: "-=">
//|	< #MUE: "*=">
//|	< #DEE: "/=">
//|	< #MODE: "%=">
//|	< ASSIGNMENTOP: (<PE> | <ME> | <MUE> | <DEE> | <MODE>  )>
//
//
//}
  static final public StartNode Start() throws ParseException {
        StartNode n = new StartNode();
        TreeNode next;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FOR:
      case WHILE:
      case DO:
      case VAR:
      case IF:
      case STOP:
      case FUNCTION:
      case NEW:
      case NUM:
      case PRINT:
      case READ:
      case ID:
      case String:
      case 34:
      case 46:
      case 53:
      case 56:
      case 57:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      next = Statement();
                              n.addChild(next);
    }
    jj_consume_token(0);
         {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public TreeNode Statement() throws ParseException {
        TreeNode n;
    if (jj_2_1(5)) {
      n = Assignment();
      jj_consume_token(SEMICOLON);
    } else if (jj_2_2(4)) {
      n = ExpStatement();
      jj_consume_token(SEMICOLON);
    } else if (jj_2_3(4)) {
      n = FunctionCallStatement();
      jj_consume_token(SEMICOLON);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRINT:
        n = PRINT_Command();
        jj_consume_token(SEMICOLON);
        break;
      case IF:
        n = IF_Statement();
        break;
      case FOR:
        n = FOR_Statement();
        break;
      case WHILE:
        n = While_Statement();
        break;
      case DO:
        n = DoWhile_Statement();
        jj_consume_token(SEMICOLON);
        break;
      case READ:
        n = Read_Command();
        jj_consume_token(SEMICOLON);
        break;
      case STOP:
        n = StopStatement();
        jj_consume_token(SEMICOLON);
        break;
      case FUNCTION:
        n = FunctionStatement();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
         {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public TreeNode Assignment() throws ParseException {
        AssignmentNode n; //= new AssignmentNode();
        ArrayNode a = null;
        Token t;
        TreeNode exp;
        TreeNode e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      jj_consume_token(VAR);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    t = jj_consume_token(ID);
                    n = new AssignmentNode(t.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 34:
      jj_consume_token(34);
      e = Exp();
                          n.isIndex = true; n.index = e;
      jj_consume_token(35);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    t = jj_consume_token(36);
                                                      n.Type = t.image;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEW:
    case NUM:
    case ID:
    case String:
    case 34:
    case 46:
    case 53:
    case 56:
    case 57:
      exp = Exp();
                                                                                      n.addChild(exp);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
                if(a != null)
                        {if (true) return a;}
                {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public TreeNode ExpStatement() throws ParseException {
        PrintNode n = new PrintNode();
        TreeNode e;
        Token t;
    e = Exp();
         n.addChild(e);
         {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public TreeNode Exp() throws ParseException {
        ExpressionNode n = new ExpressionNode();
        TreeNode n1,n2 = null;
        TreeNode e = null;
    n1 = FirstPriorety();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 37:
    case 38:
    case 39:
    case 40:
    case 41:
    case 42:
    case 43:
    case 44:
    case 45:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 37:
        jj_consume_token(37);
        n2 = Exp();
                                                  n.type = '='; n.addChild(n1);n.addChild(n2);
        break;
      case 38:
        jj_consume_token(38);
        n2 = Exp();
                                                  n.type = 'o'; n.addChild(n1);n.addChild(n2);
        break;
      case 39:
        jj_consume_token(39);
        n2 = Exp();
                                                n.type = '<';   n.addChild(n1);n.addChild(n2);
        break;
      case 40:
        jj_consume_token(40);
        n2 = Exp();
                                                n.type = '>';   n.addChild(n1);n.addChild(n2);
        break;
      case 41:
        jj_consume_token(41);
        n2 = Exp();
                                                 n.type = 'l';  n.addChild(n1);n.addChild(n2);
        break;
      case 42:
        jj_consume_token(42);
        n2 = Exp();
                                                 n.type = 'g';  n.addChild(n1);n.addChild(n2);
        break;
      default:
        jj_la1[5] = jj_gen;
        if (jj_2_4(2)) {
          jj_consume_token(43);
          n2 = Exp();
                                                       n.type = '!';n.addChild(n1);n.addChild(n2);
        } else if (jj_2_5(2)) {
          jj_consume_token(44);
          n2 = Exp();
                                                      n.type = '+';     n.addChild(n1);n.addChild(n2);
        } else if (jj_2_6(2)) {
          jj_consume_token(45);
          n2 = Exp();
                                                      n.type = '-';     n.addChild(n1);n.addChild(n2);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
                if (n2 == null)
                        {if (true) return n1;}
                else
                        {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public TreeNode FirstPriorety() throws ParseException {
        ExpressionNode n = new ExpressionNode();
        TreeNode n1,n2 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      n1 = Exp();
      jj_consume_token(47);
      break;
    case NEW:
    case NUM:
    case ID:
    case String:
    case 34:
    case 53:
    case 56:
    case 57:
      n1 = I();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 48:
    case 49:
    case 50:
    case 51:
    case 52:
      if (jj_2_7(2)) {
        jj_consume_token(48);
        n2 = FirstPriorety();
                                                                n.type = '*';   n.addChild(n1);n.addChild(n2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 49:
          jj_consume_token(49);
          n2 = Exp();
                                                  n.type = 'a'; n.addChild(n1);n.addChild(n2);
          break;
        default:
          jj_la1[8] = jj_gen;
          if (jj_2_8(2)) {
            jj_consume_token(50);
            n2 = FirstPriorety();
                                                               n.type = '/';    n.addChild(n1);n.addChild(n2);
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case 51:
              jj_consume_token(51);
              n2 = FirstPriorety();
                                                         n.type = '^';  n.addChild(n1);n.addChild(n2);
              break;
            default:
              jj_la1[9] = jj_gen;
              if (jj_2_9(2)) {
                jj_consume_token(52);
                n2 = FirstPriorety();
                                                               n.type = '%'; n.addChild(n1);n.addChild(n2);
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
      }
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
                if (n2 == null)
                        {if (true) return n1;}
                else
                        {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public TreeNode I() throws ParseException {
        TreeNode n;
        TreeNode n2;
        ExpressionNode e= new ExpressionNode();;
        Token t,t1;
        boolean isExp = false;
        TreeNode ee;
        TreeNode exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
      t = jj_consume_token(NUM);
                                    n = new ConstNode(new Value(0,new Double(Double.parseDouble(t.image)) ) );
      break;
    case String:
      t = jj_consume_token(String);
                                       n = new ConstNode(new Value(1, new String(t.image.substring(1, t.image.length()-1)) ) );
      break;
    case 53:
      jj_consume_token(53);
      n = Exp();
                                       isExp = true;e.type = 'n';       e.addChild(n);e.addChild(n);
      break;
    case 34:
      jj_consume_token(34);
                               n = new ArrayNode();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEW:
      case NUM:
      case ID:
      case String:
      case 34:
      case 46:
      case 53:
      case 56:
      case 57:
        exp = Exp();
                                                                     n.addChild(exp);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 54:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_2;
        }
        jj_consume_token(54);
        exp = Exp();
                                                                                                            n.addChild(exp);
      }
      jj_consume_token(35);
      break;
    default:
      jj_la1[15] = jj_gen;
      if (jj_2_12(4)) {
        n = FunctionCallStatement();
      } else if (jj_2_13(2)) {
        t = jj_consume_token(ID);
        jj_consume_token(55);
                                                   n = new ObjectNode(); ((ObjectNode)n).name=t.image;
        if (jj_2_10(4)) {
          n2 = FunctionCallStatement();
                                                                                                              n = new ObjectNode(); ((ObjectNode)n).name=t.image; ((FunctionCallNode)n2).type=2; n.addChild(n2);
        } else if (jj_2_11(4)) {
          t1 = jj_consume_token(ID);
                                                                                          n2 = new VariableNode(); ((VariableNode)n2).var=t1.image; n.addChild(n2);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_14(3)) {
        t = jj_consume_token(ID);
                                                 n = new VariableNode(); ((VariableNode)n).var = t.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 34:
        case 56:
        case 57:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 34:
            jj_consume_token(34);
            ee = Exp();
                                                              n.addChild(ee); ((VariableNode)n).type = 5;
            jj_consume_token(35);
            break;
          case 56:
            jj_consume_token(56);
                                                        ((VariableNode)n).type = 1;
            break;
          case 57:
            jj_consume_token(57);
                                                        ((VariableNode)n).type = 2;
            break;
          default:
            jj_la1[13] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[14] = jj_gen;
          ;
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 56:
          jj_consume_token(56);
          t = jj_consume_token(ID);
                                        n = new VariableNode(); ((VariableNode)n).var = t.image; ((VariableNode)n).type = 3;
          break;
        case 57:
          jj_consume_token(57);
          t = jj_consume_token(ID);
                                        n = new VariableNode(); ((VariableNode)n).var = t.image; ((VariableNode)n).type = 4;
          break;
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
                if(isExp)
                        {if (true) return e;}
                {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

//ObjectNode ObjectID():
//{
//  	ObjectNode n,n1,n2;
//}
//{
//  	n1 = ObjectStatement() "." <ID>
//  	{
//  	  n = new ObjectID();
//  	}
//}
  static final public IfNode IF_Statement() throws ParseException {
        IfNode n = new IfNode();
        StartNode n3,n2,n1 = new StartNode();
        TreeNode cond;
        TreeNode next;
    jj_consume_token(IF);
    jj_consume_token(46);
    cond = Exp();
                               n.addChild(cond);n.addChild(n1);
    jj_consume_token(47);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FOR:
    case WHILE:
    case DO:
    case VAR:
    case IF:
    case STOP:
    case FUNCTION:
    case NEW:
    case NUM:
    case PRINT:
    case READ:
    case ID:
    case String:
    case 34:
    case 46:
    case 53:
    case 56:
    case 57:
      next = Statement();
                                                                                          n1.addChild(next);
      break;
    case 58:
      jj_consume_token(58);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FOR:
        case WHILE:
        case DO:
        case VAR:
        case IF:
        case STOP:
        case FUNCTION:
        case NEW:
        case NUM:
        case PRINT:
        case READ:
        case ID:
        case String:
        case 34:
        case 46:
        case 53:
        case 56:
        case 57:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_3;
        }
        next = Statement();
                                                   n1.addChild(next);
      }
      jj_consume_token(59);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_4:
    while (true) {
      if (jj_2_15(6)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(ELSEIF);
      jj_consume_token(46);
      cond = Exp();
                                                n.addChild(cond); n2 = new StartNode(); n.addChild(n2);
      jj_consume_token(47);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FOR:
      case WHILE:
      case DO:
      case VAR:
      case IF:
      case STOP:
      case FUNCTION:
      case NEW:
      case NUM:
      case PRINT:
      case READ:
      case ID:
      case String:
      case 34:
      case 46:
      case 53:
      case 56:
      case 57:
        next = Statement();
                                                                                                                                    n2.addChild(next);
        break;
      case 58:
        jj_consume_token(58);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FOR:
          case WHILE:
          case DO:
          case VAR:
          case IF:
          case STOP:
          case FUNCTION:
          case NEW:
          case NUM:
          case PRINT:
          case READ:
          case ID:
          case String:
          case 34:
          case 46:
          case 53:
          case 56:
          case 57:
            ;
            break;
          default:
            jj_la1[19] = jj_gen;
            break label_5;
          }
          next = Statement();
                                          n2.addChild(next);
        }
        jj_consume_token(59);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    if (jj_2_16(6)) {
      jj_consume_token(ELSE);
                             n.hasElse = true; n3 = new StartNode(); n.addChild(n3);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FOR:
      case WHILE:
      case DO:
      case VAR:
      case IF:
      case STOP:
      case FUNCTION:
      case NEW:
      case NUM:
      case PRINT:
      case READ:
      case ID:
      case String:
      case 34:
      case 46:
      case 53:
      case 56:
      case 57:
        next = Statement();
                                                                                                            n3.addChild(next);
        break;
      case 58:
        jj_consume_token(58);
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FOR:
          case WHILE:
          case DO:
          case VAR:
          case IF:
          case STOP:
          case FUNCTION:
          case NEW:
          case NUM:
          case PRINT:
          case READ:
          case ID:
          case String:
          case 34:
          case 46:
          case 53:
          case 56:
          case 57:
            ;
            break;
          default:
            jj_la1[21] = jj_gen;
            break label_6;
          }
          next = Statement();
                                          n3.addChild(next);
        }
        jj_consume_token(59);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
         {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public ForNode FOR_Statement() throws ParseException {
        ForNode n = new ForNode();
        TreeNode n1;
        TreeNode n2;
        TreeNode n3;
        StartNode n4 = new StartNode();
        TreeNode next;
    jj_consume_token(FOR);
    jj_consume_token(46);
    n1 = Assignment();
    jj_consume_token(SEMICOLON);
    n2 = Exp();
    jj_consume_token(SEMICOLON);
    if (jj_2_17(2)) {
      n3 = Assignment();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEW:
      case NUM:
      case ID:
      case String:
      case 34:
      case 46:
      case 53:
      case 56:
      case 57:
        n3 = Exp();
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(47);
                                                                                               n.addChild(n1); n.addChild(n2); n.addChild(n3); n.addChild(n4);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FOR:
    case WHILE:
    case DO:
    case VAR:
    case IF:
    case STOP:
    case FUNCTION:
    case NEW:
    case NUM:
    case PRINT:
    case READ:
    case ID:
    case String:
    case 34:
    case 46:
    case 53:
    case 56:
    case 57:
      next = Statement();
                            n4.addChild(next);
      break;
    case 58:
      jj_consume_token(58);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FOR:
        case WHILE:
        case DO:
        case VAR:
        case IF:
        case STOP:
        case FUNCTION:
        case NEW:
        case NUM:
        case PRINT:
        case READ:
        case ID:
        case String:
        case 34:
        case 46:
        case 53:
        case 56:
        case 57:
          ;
          break;
        default:
          jj_la1[24] = jj_gen;
          break label_7;
        }
        next = Statement();
                                 n4.addChild(next);
      }
      jj_consume_token(59);
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public WhileNode While_Statement() throws ParseException {
        WhileNode n = new WhileNode();
        TreeNode n1;
        StartNode n2 = new StartNode();
        TreeNode next;
    jj_consume_token(WHILE);
    jj_consume_token(46);
    n1 = Exp();
    jj_consume_token(47);
                 n.addChild(n1);n.addChild(n2);
    jj_consume_token(58);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FOR:
      case WHILE:
      case DO:
      case VAR:
      case IF:
      case STOP:
      case FUNCTION:
      case NEW:
      case NUM:
      case PRINT:
      case READ:
      case ID:
      case String:
      case 34:
      case 46:
      case 53:
      case 56:
      case 57:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_8;
      }
      next = Statement();
                                n2.addChild(next);
    }
    jj_consume_token(59);
         {if (true) return n;}
    throw new Error("Missing return statement in function");
  }
